实现页面跳转，点击快递跳至查询页面 添加字体样式

--- a/EasyMock/src/main/AndroidManifest.xml
+++ b/EasyMock/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".DoMainQueryActivity"/>
-        <activity android:name=".AddExpressActivity"/>
+        <activity android:name=".AddExpressActivity"
+            android:launchMode="singleTask"/>
     </application>
 
 </manifest>
