--- a/EasyMock/build.gradle
+++ b/EasyMock/build.gradle
@@ -10,7 +10,7 @@ android {
         minSdkVersion 22
         targetSdkVersion 26
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -38,4 +38,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.jakewharton:butterknife:8.5.1'
     compile 'org.litepal.android:core:1.4.1'
+    implementation 'com.android.support:mediarouter-v7:26.1.0'
 }
