--- a/EasyMock/src/main/AndroidManifest.xml
+++ b/EasyMock/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
         <activity android:name=".DoMainQueryActivity"/>
         <activity android:name=".AddExpressActivity"
             android:launchMode="singleTask"/>
+        <activity android:name=".QueryActivity"/>
+        <activity android:name=".SettingActivity"/>
     </application>
 
 </manifest>
