--- a/EasyMock/src/main/AndroidManifest.xml
+++ b/EasyMock/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
             android:launchMode="singleTask"/>
         <activity android:name=".QueryActivity"/>
         <activity android:name=".SettingActivity"/>
+        <activity android:name=".ProductActivity"/>
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.owangwang.easymock.fileprovider"
